--- a/src/html/about/faq/index.jade
+++ b/src/html/about/faq/index.jade
@@ -8,6 +8,22 @@ block title
 
 block contents
 
+    .Hero
+        div
+            .HeroSlidePromo
+                .HeroSlidePromo-banner
+
+                .HeroSlidePromo-copy
+                    h3 Festival Needs Volunteers!
+                    p
+                        | Festival doesn't happen without volunteers.
+                        = ' '
+                        a(href=globals.volunteerSite) Signup now
+                        = ' '
+                        | to volunteer your time and help make this year's festival great!
+                    
+                    a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
+
     article.u-container
 
         h1 Frequently-asked Questions
