--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -19,11 +19,12 @@ block contents
         
         ul
             li One child under 12, no ticket required, may accompany and be supervised by each ticketed adult.
-            li If you buy tickets online, you must print out your PayPal confirmation and bring it to Festival in order to exchange it for your Tour of Homes ticket(s). <span class="Todo">TODO: How is this handled this year?</span>
+            li If you buy tickets online, you must print out your PayPal confirmation and bring it to Festival in order to exchange it for your Tour of Homes ticket(s).
             li Tour tickets are valid the entire weekend of festival but each house can only be visited once per ticket.
-            //- TODO put discount amount in global data
+            //- TODO put discount amount and group rate in global data
             li Discounted Home tour tickets ($5.00 off) are available until noon on the Friday Festival starts.
-            li.Todo Do we say anything about neighborhood discount and the ipna site?
+            li The group ticket rate is $12 per ticket in advance. Groups tickets must be purchased all at once and in groups of 10 or more to qualify for the group ticket rate.
+
         
         h2 This Year's Homes
         
