--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -8,6 +8,22 @@ block title
 
 block contents
 
+    .Hero
+        div
+            .HeroSlidePromo
+                .HeroSlidePromo-banner
+
+                .HeroSlidePromo-copy
+                    h3 Festival Needs Volunteers!
+                    p
+                        | Festival doesn't happen without volunteers.
+                        = ' '
+                        a(href=globals.volunteerSite) Signup now
+                        = ' '
+                        | to volunteer your time and help make this year's festival great!
+                    
+                    a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
+
     article.u-container
     
         h1 Festival Thrives on Volunteers
@@ -16,7 +32,7 @@ block contents
             | This festival runs on volunteers. To sign up to volunteer, please visit 
             a(href=globals.volunteerSite) Signup.com
             = ' '
-            | today to volunteer for this year's festival
+            | today to volunteer for this year's festival.
         
         
         h2 Rules for All Volunteers
