--- a/src/html/art/index.jade
+++ b/src/html/art/index.jade
@@ -16,14 +16,10 @@ block contents
         p 
             | Read about this year's winner 
             = ' '
-            a(href="") here.
+            a(href="/art/2017") here.
         
-        h2 Past Year's Winners
+        h2 Previous Winners
         
         ul
             li 
-                a(href="") 2016 - Cooper Pierce
-            li 
-                a(href="") 2015 - 
-            li 
-                a(href="") 2014 -
+                a(href="/art/2016") 2016 - Cooper Pierce
