--- a/src/assets/css/common/_core.scss
+++ b/src/assets/css/common/_core.scss
@@ -73,7 +73,10 @@ h4 {
 }
 
 ul {
-    margin: 0.5em 0 1em;
+    @media (max-width: $bp-sm-max) {
+        margin: 0.5em 0 1em;
+        padding: 0 1.25em;
+    }
 }
 
 li {
@@ -109,7 +112,7 @@ dl {
 
 p {
     line-height: 1.5em;
-    letter-spacing: -0.5px;
+    letter-spacing: -0.6px;
 }
 
 a {
