--- a/src/assets/css/common/_forms.scss
+++ b/src/assets/css/common/_forms.scss
@@ -6,10 +6,17 @@ label, input, textarea, select {
 input, textarea {
     margin-top: 0.5em;
     padding: 0.5em;
+    border: 1px solid $brand-grey-dark;
 }
 
 input[type="checkbox"] {
     display: inline-block;
+}
+
+input[type="submit"] {
+    padding: 0.25em 0.5em;
+    border: 1px solid $brand-grey-dark;
+    border-radius: 6px;
 }
 
 label {
