--- a/src/assets/css/pages/_contact.scss
+++ b/src/assets/css/pages/_contact.scss
@@ -14,7 +14,8 @@
     }
 
     input[type="submit"] {
-        width: 7em;
+        display: inline-block;
+        width: 10em;
         padding: 1em 2em;
     }
 
