--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -11,8 +11,13 @@ block contents
     
         h1 Inman Park Festival Kid's Zone
     
-    .Hero
-        p Fun Kids' Zone photos go here
+    .Hero.owl-carousel.owl-theme
+        div
+            mixin slideImage('2017/kidzone/golfing')
+        div
+            mixin slideImage('2017/kidzone/bouncy-girl')
+        div
+            mixin slideImage('2017/kidzone/kidzone-crowd')
     
     article.u-container
     
@@ -26,3 +31,15 @@ block contents
         //- TODO put kids' zone hours in globals
         p The Kids' Zone is a great place to let the kids play while parents or chaperones enjoy one of Atlanta's oldest urban park spaces. Kids' Zone hours are from 11AM until 6 PM on Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}.
 
+block scripts
+    script.
+        $('.owl-carousel').owlCarousel({
+            dots: true,
+            loop: true,
+            autoplay: true,
+            responsive: {
+                0: {
+                    items: 1
+                }
+            }
+        });
