home styling cleanup; fixed promotionItemHero image styling issues

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -45,32 +45,27 @@ block contents
                 p Please join us for the #{globals.ipf.date.annual}th Inman Park Spring Festival and Tour Of Homes.
 
     .PromotionItemHero.u-container.u-container--noPad
-        .PromotionItemHero-image.image--big-house
-            //- img(src="assets/img/fpo/big-house.jpg" alt="Tour Home")
-            
+        .PromotionItemHero-image.image--art-2017
+
         .PromotionItemHero-text
             section
-                h2 Tour of Homes
+                h2 Artwork Chosen
                 p 
-                    a(href="/events/tour-of-homes") Preview the homes on tour this year.
+                    a(href="/art/2017/") Read the interview with local artist Mindy Phan.
             .ArrowNav
                 a(href="/events/tour-of-homes") >
-    
-    
+
     ul.PromotionGrid.u-container.u-container--noPad
         li.PromotionItem.alt-primary
             section
                 h3 Join Our Volunteer Team Today.
-                
                 a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
-        
+
         li.PromotionItem
             section
-                h3 Festival Artwork Chosen
-                
+                h3 Tour of Homes
                 p
-                    a(href="/art/2017/") Read the interview with local artist Mindy Phan.
-            
+                    a(href="/events/tour-of-homes") Preview the homes on tour this year.
             .ArrowNav
                 a(href="#") >
 
