--- a/src/assets/css/_images.scss
+++ b/src/assets/css/_images.scss
@@ -3,3 +3,9 @@
     background-size: cover;
     background-position: center center;
 }
+
+.image--art-2017 {
+    background-image: url(/assets/img/2017/home-art-banner.jpg);
+    background-size: cover;
+    background-position: center center;
+}
