--- a/src/assets/css/components/_pageIntro.scss
+++ b/src/assets/css/components/_pageIntro.scss
@@ -22,6 +22,11 @@
         @media screen and (min-width: $bp-md) {
             margin-left: 1em;
             line-height: 1.5;
+            font-size: 2em;
+        }
+
+        @media (min-width: $bp-lg) {
+            font-size: 2.5em;
         }
     }
 }
