--- a/src/assets/css/components/_promotionItemHero.scss
+++ b/src/assets/css/components/_promotionItemHero.scss
@@ -14,13 +14,12 @@
 }
 
 .PromotionItemHero-image {
+    width: 100%;
+    height: 190px;
+
     @media screen and (min-width: $bp-md) {
         flex-basis: 66.6666%;
-    }
-
-    img {
-        display: block;
-        width: 100%;
+        height: inherit;
     }
 }
 
