--- a/src/html/map/index.jade
+++ b/src/html/map/index.jade
@@ -26,7 +26,7 @@ block contents
         
         h2 Festival Map with Free Shuttle Route and Bike Parking
         
-        <iframe src="https://www.google.com/maps/d/embed?mid=zTP9tjGZt7HU.ktLdj8fTqUuc" width="100%" height="480"></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xhnIWgf6rrrt4iT7z5GT9iVP3hU" width="640" height="480"></iframe>
         
         
         
