--- a/src/assets/css/pages/_music.scss
+++ b/src/assets/css/pages/_music.scss
@@ -6,6 +6,7 @@ $oddRowColor: #B4CED6;
     list-style: none;
     margin-left: 0;
     padding-left: 0;
+    padding-right: 0;
 }
 
 .MusicSelector {
