--- a/src/html/map/index.jade
+++ b/src/html/map/index.jade
@@ -26,7 +26,10 @@ block contents
         
         h2 Festival Map with Free Shuttle Route and Bike Parking
         
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xhnIWgf6rrrt4iT7z5GT9iVP3hU" width="640" height="480"></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xhnIWgf6rrrt4iT7z5GT9iVP3hU" width="100%" height="400"></iframe>
+
+        p
+            a(href="https://drive.google.com/open?id=1xhnIWgf6rrrt4iT7z5GT9iVP3hU&usp=sharing") View this map in your map application (or it's own browser window)
         
         
         
