--- a/src/html/about/index.jade
+++ b/src/html/about/index.jade
@@ -53,7 +53,8 @@ block contents
         
         p The Tour of Homes is a self-conducted tour of some of the beautiful homes and buildings in Inman Park. See inside some of the glorious old Victorian homes or check out some of the beautiful remodeling jobs neighbors have completed on their houses.
         
-        p The home preview starts on Friday #{globals.ipf.date.friday.date} between #{globals.ipf.date.friday.hours} and continues through Saturday and Sunday between #{globals.ipf.date.saturday.hours}.
+        //- TODO globalize the times below.
+        p The home preview starts on Friday #{globals.ipf.date.friday.date} between #{globals.ipf.date.friday.hours} and continues through Saturday and Sunday between 12PM - 6PM.
         
         p 
             | To find out more about the Tour of Homes and read about the homes on the tour, visit the
