--- a/src/html/booths/become-an-exhibitor/index.jade
+++ b/src/html/booths/become-an-exhibitor/index.jade
@@ -10,24 +10,24 @@ block contents
     article.u-container
     
         h1 Become an Exhibitor
-        
-        p We have moved the Inman Park Festival application process to ZAPPlication, and will no longer accept paper applications.
 
-        p 
-            | To apply to become a vendor for the #{globals.ipf.date.year} #{globals.ipf.title}, please use this link:
-            = " "
-            a(href="https://www.zapplication.org/event-info.php?ID=5363") https://www.zapplication.org/event-info.php?ID=5363
+        p Exhibitor applications for this year's festival are now closed. Vendors will be notified of acceptance no later than #{globals.vendors.notification}.
+
+        //- p 
+        //-     | To apply to become a vendor for the #{globals.ipf.date.year} #{globals.ipf.title}, please use this link:
+        //-     = " "
+        //-     a(href="https://www.zapplication.org/event-info.php?ID=5363") https://www.zapplication.org/event-info.php?ID=5363
         
-        p 
-            | If you have questions, please email us at:
-            = " "
-            a(href="mailto:artinmanpark@gmail.com") artinmanpark@gmail.com
+        //- p 
+        //-     | If you have questions, please email us at:
+        //-     = " "
+        //-     a(href="mailto:artinmanpark@gmail.com") artinmanpark@gmail.com
         
-        h2 Deadlines for the #{globals.ipf.date.year} #{globals.ipf.title}:
+        //- h2 Deadlines for the #{globals.ipf.date.year} #{globals.ipf.title}:
         
-        ul
-            li Application submissions must be postmarked by #{globals.vendors.deadline}
-            li Vendors will be notified of acceptance no later than #{globals.vendors.notification}
+        //- ul
+        //-     li Application submissions must be postmarked by #{globals.vendors.deadline}
+        //-     li Vendors will be notified of acceptance no later than #{globals.vendors.notification}
             
         h2 Exhibitor Information
         
