--- a/src/html/booths/index.jade
+++ b/src/html/booths/index.jade
@@ -39,9 +39,9 @@ block contents
         
         p Together they comprise one of the largest street markets in the Southeast!
         
-        h2 Become a Vendor
+        //- h2 Become a Vendor
         
-        p 
-            | If you are interested in being a vendor for the #{globals.ipf.date.year} festival, 
-            = ' '
-            a(href="/booths/become-an-exhibitor") visit the Become an Exhibitor page for more info.
+        //- p 
+        //-     | If you are interested in being a vendor for the #{globals.ipf.date.year} festival, 
+        //-     = ' '
+        //-     a(href="/booths/become-an-exhibitor") visit the Become an Exhibitor page for more info.
