--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -31,6 +31,31 @@ block contents
         //- TODO put kids' zone hours in globals
         p The Kids' Zone is a great place to let the kids play while parents or chaperones enjoy one of Atlanta's oldest urban park spaces. Kids' Zone hours are from 11AM until 6 PM on Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}.
 
+        h2 Kids' Zone Schedule
+
+        p Events for Saturday #{globals.ipf.date.saturday.date}:
+
+        ul
+            li 11:30 Atlanta InTown Yoga's Morning Yoga
+            li 12:00 WRFG Radio's Butterfly Tales Storytelling
+            li 1:30 Paniflov's Performing Pets
+            li 2:00 Festival Parade
+            li 3:30 Paniflov's Performing Pets
+            li 4:00 Circus Camp's Aerial Performance
+            li 5:00 Sweet Pea and Markey's Giant Bubbles
+            li 5:30 WRFG Radio's Butterfly Tales Storytelling
+        
+        p Events for Sunday #{globals.ipf.date.sunday.date}:
+
+        ul
+            li 11:30 Atlanta InTown Yoga's Morning Yoga
+            li 12:00 Paniflov's Performing Pets
+            li 12:30 WRFG Radio's Butterfly Tales Storytelling
+            li 2:00 Paniflov's Performing Pets
+            li 3:00 Sweet Pea and Markey's Giant Bubbles
+            li 3:30 Circus Camp's Aerial Performance
+            li 4:00 WRFG Radio's Butterfly Tales Storytelling
+
 block scripts
     script.
         $('.owl-carousel').owlCarousel({
