--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -13,15 +13,29 @@ block contents
         
         p The Tour of Homes is a self-conducted tour of some of the beautiful homes and buildings in Inman Park. See inside some of the glorious old Victorian homes or check out some of the beautiful remodeling jobs neighbors have completed on their houses.
         
-        p The home preview starts on Friday #{globals.ipf.date.friday.date} between #{globals.ipf.date.friday.hours} and continues through Saturday and Sunday between #{globals.ipf.date.saturday.hours}.
+        //- TODO globalize the times below
+        p The home preview starts on Friday #{globals.ipf.date.friday.date} between #{globals.ipf.date.friday.hours} and continues through Saturday and Sunday between 12PM - 6PM.
         
+        h2 Buying Tickets
+
+        p Tickets will cost $15 each. Online ticket purchase will be available soon. 
+        
+        //- p Tickets can also be purchased in-person at the following neighborhood locations:
+
+        //- ul
+        //-     li Little Five Points Pharmacy (484 Moreland Avenue)
+        //-     li Nandina Home and Design (245 N. Highland Avenue)
+        //-     li Inman Dry Goods Boutique (743 Edgewood Avenue)
+        //-     li The Collection (723 Lake Avenue)
+
+        //- p Starting at noon on Friday #{globals.ipf.date.friday.date}, tickets at these locations will increase to $20 and be available through the end of Festival.
+
         h2 Important Details
-        
+
         ul
             li One child under 12, no ticket required, may accompany and be supervised by each ticketed adult.
             li If you buy tickets online, you must print out your PayPal confirmation and bring it to Festival in order to exchange it for your Tour of Homes ticket(s).
             li Tour tickets are valid the entire weekend of festival but each house can only be visited once per ticket.
-            //- TODO put discount amount and group rate in global data
             li Discounted Home tour tickets ($5.00 off) are available until noon on the Friday Festival starts.
             li The group ticket rate is $12 per ticket in advance. Groups tickets must be purchased all at once and in groups of 10 or more to qualify for the group ticket rate.
 
