music updates; paypal testing

--- a/src/html/events/music/index.jade
+++ b/src/html/events/music/index.jade
@@ -34,19 +34,16 @@ block contents
     article.u-container
         h2 Atlanta Musicians' Emergency Relief Fund
 
-        p For many years now, the music programming at the Inman Park Festival &amp; Tour of homes has been the responsibility of longtime resident Steve Ellison. He has contacts with a lot of bands and band members. This year Steve has an initiative that we as festival would like to support. Below he explains:
-
-        p "I've often been asked how long I intend to continue doing this; this labor of love, blood, sweat, and everything else entailed with organizing the Inman Park Festival's musical entertainment every year.
-
-        p This will be my 13th year (or so), and almost every Spring for the past four or five, I've insisted that "This may be my last year doing this…." only to ultimately bail on that promise.  I guess I have to admit it...I'm hooked for as long as I can endure, physically and/or mentally. I mean, this stuff takes a significant toll on a body somewhat advanced into its' Golden Years. It involves a lot of running about, all weekend long, plus you have to boss everybody around without hurting anyone's feelings, organize and schedule a whole lot of stuff, always attempting to spend the Festival's entertainment budget wisely, and ending up with a weekend with no lame lapses in the musical schedule (usually accomplished, if I may express my opinion).  And I ain't gettin' no younger.  But I often do feel that all this music stuff might be as close as I'll ever get to eternal youth.
-
-        p A huge part of my joy and the joy of our guests has been the local community of musicians. We feel they have always supported us; our locals have historically given us great rates compared with those which they usually command.
-
-        p I am very happy to announce that this year I am in a position to finally give something back. Many musicians live from paycheck to paycheck, sometimes without being able to save up for emergencies. That is why I am helping set up the Atlanta Musicians' Emergency Relief Fund.  Similar to the Giving Kitchen, the Atlanta Musician's Emergency Relief Fund hopes to provide help when and where musicians need it the most. We will be asking for donations after all performances, with the heartfelt support of our Festival Committee.
-
-        p We offer this idea as a small payback in kind to them, and we hope that this effort may grow to become an ongoing relationship between the Inman Park Festival and Atlanta's musical community.
+        p For many years now, the music programming at the Inman Park Festival & Tour of homes has been the responsibility of our neighbor Steve Ellison, from nearby in the Old 4th Ward. Last year Steve had an idea that we as "the Inman Park Festival" decided to support. Below he explains:
+        
+        p "This will be my 14th year (or so), and almost every Spring a huge source of my own pride in the event (and pride in seeing our guests having so much fun) has been the local community of musicians. We feel they have always given us support; our hometown artists have historically given us great rates compared with those which they usually command. As a festival "expediter", I'm proud to present the fact that we have consistently supported and hired mostly local bands, including many that are mainly touring acts, but call Atlanta home, rarely performing there. They seem to consider the Inman Park Festival a "cherry gig"; a favor we are delighted to accept. 
+        
+        p I am happy to announce that last year we were able to collect several thousand dollars, which became a "seed fund" for a 501c3 non-profit corporation. Many musicians live from paycheck to paycheck, sometimes without being able to save up for emergencies. That is why we have set up the Atlanta Musicians' Emergency Relief Fund (AMERF). Similar to the Giving Kitchen (for professional food-service workers), we hope to provide help when and where nearby musicians need it the most. We will be asking for donations after all performances again this year, with the heartfelt support of our Festival Committee.
+        
+        p Our thanks go to the Inman Park Festival committee for allowing us this opportunity.
 
         p Thanks for your continued support! Enjoy the Festival!"
+
 
 
 
