--- a/src/html/payments/index.jade
+++ b/src/html/payments/index.jade
@@ -9,6 +9,6 @@ block contents
 
         h1 Paypal Transaction Complete
 
-        p Thank for your purchase. 
+        p Thank you for your payment. Your transaction has been completed, and a receipt for your purchase has been emailed to you. You may log into your account at www.paypal.com to view details of this transaction.
 
         p Please print out the Paypal receipt you were sent via email. <strong>Do not print the final Paypal page you just saw and take it to Festival.</strong> Festival volunteers will need to see a copy of your Paypal receipt in order to redeem your purchase.
