added honeypot to contact form

--- a/src/assets/css/pages/_contact.scss
+++ b/src/assets/css/pages/_contact.scss
@@ -13,6 +13,11 @@
         width: 1em;
     }
 
+    // honeypot
+    input[name="email_address"] {
+        display: none;
+    }
+
     input[type="submit"] {
         display: inline-block;
         width: 10em;
