--- a/src/html/contact-us/index.jade
+++ b/src/html/contact-us/index.jade
@@ -35,8 +35,7 @@ block contents
                 textarea(name="message" required)
 
             label
-                input(type="checkbox" name="robot" required)
-                | I'm not a robot.
+                input(type="text" size="25" name="email_address")
             
             input(type="submit" name="submit" value="Send Email")
 
