added Banner-dates component to home page

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -8,6 +8,10 @@ block title
 
 block contents
 
+    div.Banner-dates
+        div Tour of Homes Preview: Friday April 28
+        div Festival: Saturday April 29 &amp; Sunday April 30
+
     .Hero.owl-carousel.owl-theme
         div
             .HeroSlidePromo
