--- a/src/html/events/parade/index.jade
+++ b/src/html/events/parade/index.jade
@@ -7,6 +7,8 @@ block contents
 
     mixin secondaryNav(globals.events.nav, "parade")
 
+    mixin presentingSponsor("/assets/img/2017/sponsors/presenting-sponsors/mailchimp.png", "Mailchimp")
+
     .u-container
     
         h1 Inman Park Festival Parade
