--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -7,6 +7,8 @@ block contents
 
     mixin secondaryNav(globals.events.nav, "kids' zone")
 
+    mixin presentingSponsor("/assets/img/2017/sponsors/presenting-sponsors/publix.png", "Publix")
+
     .u-container
     
         h1 Inman Park Festival Kid's Zone
