--- a/src/html/events/music/index.jade
+++ b/src/html/events/music/index.jade
@@ -7,6 +7,8 @@ block contents
 
     mixin secondaryNav(globals.events.nav, "music")
 
+    mixin presentingSponsor("/assets/img/2017/sponsors/presenting-sponsors/andre-de-winter.png", "Andre de Winter Homes")
+
     .u-container
 
         h1 Live Music at the Inman Park Festival
