--- a/src/html/templates/mixins.jade
+++ b/src/html/templates/mixins.jade
@@ -79,3 +79,9 @@ mixin sponsorGridImage(src, alt, url)
 mixin footerSponsor(src, alt, url)
     a(href=url target="_blank")
         img(src=src alt=alt)
+
+mixin presentingSponsor(src, alt)
+    .PresentingSponsor
+        h4 Presenting Sponsor:
+        .PresentingSponsor-logo
+            img(src=src alt=alt)
