--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -6,7 +6,7 @@ $brand-green: rgb(159, 199, 90);
 $brand-grey: rgb(110, 110, 110);
 $brand-grey-dark: rgb(45, 45, 45);
 
-$link-color: $brand-green;
+$link-color: rgb(85, 132, 46);
 $link-hover-color: rgba($brand-green, 0.15);
 $link-color-alt: rgb(18, 34, 135);
 $link-hover-color-alt: rgb(34, 54, 181);
