updated kidzone schedule

--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -38,7 +38,7 @@ block contents
         p Events for Saturday #{globals.ipf.date.saturday.date}:
 
         ul
-            li 11:30 Atlanta InTown Yoga's Morning Yoga
+            li 11:30 Atlanta Intown Tumbling and Yoga for Kids Yoga Morning
             li 12:00 WRFG Radio's Butterfly Tales Storytelling
             li 1:30 Paniflov's Performing Pets
             li 2:00 Festival Parade
@@ -50,7 +50,7 @@ block contents
         p Events for Sunday #{globals.ipf.date.sunday.date}:
 
         ul
-            li 11:30 Atlanta InTown Yoga's Morning Yoga
+            li 11:30 Atlanta Intown Tumbling and Yoga for Kids Yoga Morning
             li 12:00 Paniflov's Performing Pets
             li 12:30 WRFG Radio's Butterfly Tales Storytelling
             li 2:00 Paniflov's Performing Pets
