updated paypal buttons and added separate post-pay pages for butterfly vs toh

--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -22,7 +22,7 @@ block contents
 
         p Tickets will cost $15 each. Online ticket purchase will be available soon. 
         
-        //- p Tickets can also be purchased in-person at the following neighborhood locations:
+        //- p Tickets can also be purchased in-person at the following neighborhood locations. These locations accept only checks or cash for ticket purchases.
 
         //- ul
         //-     li Little Five Points Pharmacy (484 Moreland Avenue)
