update paypal button code; paypal page shows same content as ToH page

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -20,6 +20,7 @@
 @import 'components/pageIntro';
 @import 'components/promotions';
 @import 'components/banners';
+@import 'components/paypal';
 
 @import 'pages/sponsors';
 @import 'pages/faq';
