--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -65,6 +65,7 @@ block contents
                 h3 Join Our Volunteer Team Today.
                 a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
 
+
         li.PromotionItem
             section
                 h3 Tour of Homes
@@ -72,6 +73,16 @@ block contents
                     a(href="/events/tour-of-homes") Preview the homes on tour this year.
             .ArrowNav
                 a(href="#") >
+
+        //- Buy Tour Tickets Now
+        //-
+        //- li.PromotionItem
+        //-     section
+        //-         h3 Tour of Homes Tickets For Sale!
+        //-         p
+        //-             a(href="/events/tour-of-homes") Buy discounted advance tickets on the Tour of Homes page
+        //-     .ArrowNav
+        //-         a(href="#") >
 
 
         li.PromotionItem.alt-secondary
