--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -20,8 +20,13 @@ block contents
         
         h2 Buying Tickets
 
-        p Tickets will cost $15 each. Online ticket purchase will be available soon. 
+        p Tickets are $15 each and will be on sale shortly.
+        //- p Tickets are $15 each. Group tickets are available at 10 tickets for $120.
+
+        //- p <strong>Important Note:</strong> When your transaction has been completed, a receipt for your purchase will be emailed to you. 
         
+        //- p Please print the first page of the PayPal receipt sent via email showing your name and the number of tickets purchased. Bring this page to one of our Ticket Sales booths to exchange for your Tour of Homes Ticket(s).
+
         //- p Tickets can also be purchased in-person at the following neighborhood locations. These locations accept only checks or cash for ticket purchases.
 
         //- ul
