home slideshow uses local images

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -29,13 +29,16 @@ block contents
                     a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
 
         div
-            mixin slideImage('parade-block-heros_prqgxi')
+            mixin slideImage('/assets/img/slideshows/parade-block-heros', 'Parade Block Heroes')
+
         div
-            mixin slideImage('parade-elvises_cyaqbo')
+            mixin slideImage('/assets/img/slideshows/parade-elvises', 'Parade Elvises')
+
         div
-            mixin slideImage('painting-face_odgxph')
+            mixin slideImageXL('/assets/img/slideshows/painting-face', 'Face painting in progress')
+        
         div
-            mixin slideImage('homes-bighome')
+            mixin slideImageXL('/assets/img/slideshows/homes-bighome', 'One of many beautfil homes in Inman Park')
 
     .u-container
     
