--- a/src/html/templates/mixins.jade
+++ b/src/html/templates/mixins.jade
@@ -71,7 +71,13 @@ mixin musicday(dayTitle, stages, day)
             each band in day.w
                 mixin bandListing(band)
 
-mixin slideImage(imageName)
+mixin slideImage(imageName, alt)
+    img(sizes="(min-width: 1024px) 1024px, 100vw" srcset="#{imageName}-1024.jpg 1024w, #{imageName}-768.jpg 768w, #{imageName}-320.jpg 320w" src="#{imageName}-320.jpg" alt=alt)
+
+mixin slideImageXL(imageName, alt)
+    img(sizes="(min-width: 1024px) 1024px, 100vw" srcset="#{imageName}-2048.jpg 2048w, #{imageName}-1024.jpg 1024w, #{imageName}-768.jpg 768w, #{imageName}-320.jpg 320w" src="#{imageName}-320.jpg" alt=alt)
+
+mixin slideImageOld(imageName)
     img(sizes="(min-width: 1024px) 1024px, 100vw" srcset="http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_256/ipf/#{imageName} 256w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_512/ipf/#{imageName} 512w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_768/ipf/#{imageName} 768w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_1024/ipf/#{imageName} 1024w" src="http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_512/ipf/#{imageName}" alt)
 
 mixin tourImage(imageName, alt)
